 *
 *
 * Copyright (c) 2007-2011 VCAD System Research Program, RIKEN. 
 * All rights reserved.
 *
 * Copyright (c) 2011-2015 Institute of Industrial Science, The University of Tokyo. 
 * All rights reserved.
 *
 * Copyright (c) 2012-2015 Advanced Institute for Computational Science, RIKEN. 
 * All rights reserved.
 *
 */


REVISION HISTORY
================

--------------------------
2015-02-22
r1595 bug fix and check intrinsic problems
 - 2Dcavity, 3Dcavity, 2Dcyl, Cylinder, Jet, LDC, PMT, ThermalCavity, SHC1D

r1594 merge parsing of local and outer BCs

--------------------------
2015-02-21
r1593 setBit5ID() >> setMediumID()
 - check Cylinder

--------------------------
2015-02-17
r1592 modify passive scalar part for compressed cut
- check 2Dcavity, 3Dcavity, 2Dcyl, Cylinder, LDC, PMT, SHC1D ,Jet, HeatedPlate, ThermalCavity

--------------------------
2015-02-14
r1591 Is there seed points inside domain?

--------------------------
2015-02-11
r1590 refactoring of fill process
- introduction of fill hint

--------------------------
2015-02-07
r1589 insert mpi.h at first in ParseMat.h and CompoFraction.h

r1588 change calculation policy from ceil to round off to get g_voxel in SD_getParameter()

--------------------------
2015-02-05
r1587
- add printForceAvr()

--------------------------
2015-02-01
r1586 correction of CompoFraction class
- pass non-dimensional parameter

r1585 update test

r1584 correct id management of IP_Cylinder
- update parameter files for intrinsic examples
  >> 2Dcavity, 3Dcavity, 2Dcyl, Cylinder, LDC, PMT

--------------------------
2015-01-31
r1583 bug fix in fill()
- correction of pressure gradient : update_vec_()

--------------------------
2015-01-27
r1582 Introduce flags for unisotropic Cartesian
- expire naive implementation
- expire facing_? flags and introduce bc_dn_? flags
- divergence_cc => change calculation from sum_(u^*) to div(u^*)

--------------------------
2015-01-21
r1581 bug fix in paintedCutOnPoint in Geometry.C
